# eeg-otta

./: .gitignore  README.md  pyproject.toml
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/: config.yaml
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/1/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/2/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/3/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/4/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/5/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/6/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/7/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/8/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-40-57/9/: model-v1.ckpt
checkpoints/src-bcic2a_loso_2023-12-04_14-41-13/: config.yaml
checkpoints/src-bcic2b_loso_2023-12-04_18-31-22/: config.yaml
checkpoints/src-bcic2b_within_2023-12-04_18-31-55/: config.yaml
configs/: bcic2a_cross_basenet.yaml  bcic2a_loso_basenet.yaml  bcic2a_within_basenet.yaml  bcic2b_loso_basenet.yaml  bcic2b_within_basenet.yaml  tta_alignment.yaml  tta_entropy_minimization.yaml  tta_norm.yaml
eeg_otta/: run_adaptation.py  train_source_model.py
eeg_otta/datamodules/: __init__.py  base.py  bcic.py
eeg_otta/models/: basenet.py  classification_module.py
eeg_otta/tta/: __init__.py  alignment.py  base.py  bn.py  entropy_minimization.py  norm.py
eeg_otta/utils/: alignment.py  get_accuracy.py  get_datamodule_cls.py  get_tta_cls.py  load_bcic.py
(+27 files in other folders)
