[tool.poetry]
name = "eeg-otta"
version = "0.1.0"
description = ""
authors = ["martinwimpff <martin.wimpff@iss.uni-stuttgart.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "2.0.1"
scikit-learn = "^1.3.0"
pytorch-lightning = "2.0.7"
braindecode = "0.7"
moabb = "^0.5.0"
einops = "^0.6.1"
matplotlib = "3.6.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
